Added padding top to text above pokeball multiplier icon

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <!-- FIRST MULTIPLIER -->
         <div class="col-6 col-sm-3">
-          <div class="col-12">
+          <div class="col-12 pt-2">
             <small>+1</small>
           </div>
           <div class="col-12">
@@ -68,7 +68,7 @@
 
         <!-- Second MULTIPLIER-->
         <div class="col-6 col-sm-3">
-          <div class="col-12">
+          <div class="col-12 pt-2">
             <small>+2</small>
           </div>
           <div class="col-12">
@@ -81,7 +81,7 @@
 
         <!-- THIRD MULTIPLIER -->
         <div class="col-6 col-sm-3">
-          <div class="col-12">
+          <div class="col-12 pt-2">
             <small>+5</small>
           </div>
           <div class="col-12">
@@ -94,7 +94,7 @@
 
         <!-- FOURTH MULTIPLIER -->
         <div class="col-6 col-sm-3">
-          <div class="col-12">
+          <div class="col-12 pt-2">
             <small>+10</small>
           </div>
           <div class="col-12">
