Added gx-0 class on all row to remove gutter

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body class="row justify-content-center align-items-center">
+<body class="row gx-0 justify-content-center align-items-center">
   <!-- Website content -->
   <!-- <div class="col-md-10 col-xxl-8"> -->
   <!-- Partie qui reprend le cookie et les boutons -->
   <div class="col-12 col-md-10 col-xxl-8 text-center">
 
     <!-- Partie qui reprend le nombre de cookies -->
-    <div class="row justify-content-center mt-3">
+    <div class="row gx-0 justify-content-center mt-3">
       <div class="col-8 rounded-3 info-cookies">
         <p><span id="cookie-counter" class="text-warning fs-3">0</span><br>Pokédollar in the bank.</p>
       </div>
@@ -39,19 +39,19 @@
 
       <!-- STORE -->
 
-      <div class="row justify-content-around my-2">
+      <div class="row gx-0 justify-content-around my-2">
         <h2 class="text-uppercase text-wrap titre">S t o r e</h2>
       </div>
 
       <!-- MULTIPLIER -->
 
-      <div class="row justify-content-center mb-2 rounded-3" id="multiBanner">
+      <div class="row gx-0 justify-content-center mb-2 rounded-3" id="multiBanner">
         <div class="col-10 rounded-3 bg-second">
           <p class="fw-lighter text-uppercase pt-2">M u l t i p l i e r s</p>
         </div>
       </div>
 
-      <div class="row justify-content-center">
+      <div class="row gx-0 justify-content-center">
 
         <!-- FIRST MULTIPLIER -->
         <div class="col-6 col-sm-3">
@@ -110,14 +110,14 @@
 
 
       <!-- DEBUT AUTO-CLICKERS -->
-      <div class="row justify-content-center mb-2 my-1 rounded-3 mt-4 mb-2" id="autoBanner">
+      <div class="row gx-0 justify-content-center mb-2 my-1 rounded-3 mt-4 mb-2" id="autoBanner">
         <div class="col-10 rounded-3 bg-second">
         <p class="fw-lighter text-uppercase pt-2 ">A u t o - c l i c k e r s</p>
         </div>
       </div>
 
       <!-- FIRST -->
-      <div class="row justify-content-center align-items-center m-0">
+      <div class="row gx-0 justify-content-center align-items-center m-0">
         <div class="col-2"><img src="images/autoMagikarp.png" id="auto-clicker-1"
             onclick="if(score > magikarp.price){this.src='images/autoMagikarp.gif'}"></div>
         <div class="col-7">
@@ -132,7 +132,7 @@
       </div>
 
       <!-- SECOND -->
-      <div class="row justify-content-center align-items-center m-0">
+      <div class="row gx-0 justify-content-center align-items-center m-0">
         <div class="col-2"><img src="images/autoSnorlax.png" id="auto-clicker-2"
             onclick="if(score > snorlax.price){this.src='images/autoSnorlax.gif'}"></div>
         <div class="col-7">
@@ -146,7 +146,7 @@
       </div>
 
       <!-- THIRD -->
-      <div class="row justify-content-center align-items-center m-0">
+      <div class="row gx-0 justify-content-center align-items-center m-0">
         <div class="col-2"><img src="images/autoPikachu.png" id="auto-clicker-3"
             onclick="if(score > pikachu.price){this.src='images/autoPikachu.gif'}"></div>
         <div class="col-7">
@@ -159,7 +159,7 @@
       </div>
 
       <!-- FOURTH -->
-      <div class="row justify-content-center align-items-center m-0">
+      <div class="row gx-0 justify-content-center align-items-center m-0">
         <div class="col-2"><img src="images/autoMewtwo.png" id="auto-clicker-4"
             onclick="if(score > mewtwo.price){this.src='images/autoMewtwo.gif'}"></div>
         <div class="col-7">
