Replaced P with $ in pokédollar counter text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Partie qui reprend le nombre de cookies -->
     <div class="row gx-0 justify-content-center mt-3">
       <div class="col-8 rounded-3 info-cookies">
-        <p><span id="cookie-counter" class="text-warning fs-3">0</span><br>Pokédollar in the bank.</p>
+        <p><span id="cookie-counter" class="text-warning fs-3">0</span><br>$okédollar in the bank.</p>
       </div>
       <div class="col-8 mt-2">
         <p class="lh-sm text-normal">Try to get them all !</p>
