--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="col-8 rounded-3 info-cookies">
         <p><span id="cookie-counter" class="text-warning fs-3">0</span><br>$okédollar in the bank.</p>
       </div>
-      <div class="col-8 mt-2">
+      <div class="col-8 mt-2" id="getAll">
         <p class="lh-sm text-normal">Try to get them all !</p>
       </div>
 
